--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,12 @@ repositories {
 
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-batch'
-	runtimeOnly 'org.hsqldb:hsqldb'
+	annotationProcessor group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
+	implementation group: 'org.projectlombok', name: 'lombok', version: '1.18.32'
+	implementation group: 'com.microsoft.sqlserver', name: 'mssql-jdbc', version: '12.6.1.jre11'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'org.springframework.batch:spring-batch-test'
 }
