--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 server:
   port: 8080
-
 spring:
   batch:
     job:
@@ -32,7 +31,11 @@ spring:
         order_inserts: true
         jdbc:
           batch_size: 10000
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
 
 
 
